# office_hours

./: .gitignore  README.md  dbusSessionLogger.py  launch-sessionlocklogger.sh  logAnalyzer.py  office_hours.py  requirements.txt  stop-sessionlocklogger.sh
backend/logger/: admin.py  models.py  urls.py  views.py
backend/logger/migrations/: 0001_initial.py
backend/logger/templates/logger/: detail.html  history.html  index.html
backend/officehours/: settings.py  urls.py
backend/tools/: log.py
office_hours/: go.mod  main.go
office_hours/model/: event.go  report.go  session.go  session_test.go
office_hours/model_test/: session_test.go
officehours/: dbusSessionLogger.py  idletime.sh  logAnalyzer.py
ut/: test_logAnalyzer.py
working_hours/: Cargo.toml
working_hours/src/: main.rs  models.rs
