[package]
name = "working_hours"
version = "0.1.0"
authors = ["Hombrenieve <hombrenieve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
assert_matches = "1.4"